elearningProject/force-app/main/default/objects/Trail_progress__c/Trail_progress__c.object-meta.xml
<CustomObject>
    <description>Contains information related to a student&apos;s progress on a certain module</description>
    <label>Trail progress</label>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>Trail progress Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trails progress</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>