elearningProject/force-app/main/default/objects/Trail_progress__c/fields/Students__c.field-meta.xml
<CustomField>
    <fullName>Students__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Trails progress</relationshipLabel>
    <relationshipName>Trails_progress</relationshipName>
    <type>Lookup</type>
</CustomField>