elearningProject/force-app/main/default/objects/Trail_progress__c/fields/Trail_stage__c.field-meta.xml
<CustomField>
    <fullName>Trail_stage__c</fullName>
    <label>Trail stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>